--- a/index.html
+++ b/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>Title</title>
-</head>
+<head> 
 
-<body>
-    <h1>Hello world</h1>
+  <meta charset="utf-8"/>
+
+  <meta name="viewport" content="width=device-width" />
+  <title>My Pinboard for minecraft build ideas</title> 
+  </head> 
+
+
+  <body> 
+    <h1 class"header">My Pinboard</h1>
+    <div class"searchcontainer"> 
+      <label class"searchlabel">search</label>
+      <input class"searchInput" /> 
+      <p class="searchresult"></p> 
+      <button class="newCardButton">Add a card</button>
+
+    </div>
+
+    <div class="card"
+    <img /> 
+    <div class=TagContainer 
+    <button class="tagButton">TagButton</button> 
+    </div>
+  </div>
+</div>   
+
 </body>
 
 </html>
