changed the font to the title

--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
 
   <meta name="viewport" content="width=device-width" />
   <title>My Pinboard for minecraft build ideas</title> 
+  <link rel="stylesheet" href="style.css" /> 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Coda+Caption:wght@800&family=Passion+One:wght@700&display=swap" rel="stylesheet">
   </head> 
 
 
   <body> 
     <h1 class"header">My Pinboard</h1>
-    <div class"searchcontainer"> 
-      <label class"searchlabel">search</label>
+    <div class"searchContainer"> 
+      <label class"searchLabel">search</label>
       <input class"searchInput" /> 
-      <p class="searchresult"></p> 
+      <p class="searchResult"></p> 
       <button class="newCardButton">Add a card</button>
 
     </div>
