changed some styling in css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
   <body> 
-    <h1 class"header">My Pinboard</h1>
+    <h1 class"header">minecraft builds</h1>
     <div class"searchContainer"> 
       <label class"searchLabel">search</label>
       <input class"searchInput" /> 
