--- a/index.html
+++ b/index.html
@@ -23,13 +23,7 @@
 
     </div>
 
-    <div class="card"
-    <img /> 
-    <div class=TagContainer 
-    <button class="tagButton">TagButton</button> 
-    </div>
-  </div>
-</div>   
+  <div class="cardContainer" id="cardContainer"></div>
 
 </body>
 
