i changed bunches added a couple of images to the Minecraft build thingy and it is a completed project now and will keep it updated

--- a/index.html
+++ b/index.html
@@ -15,15 +15,51 @@
 
   <body> 
     <h1 class"header">minecraft builds</h1>
-    <div class"searchContainer"> 
-      <label class"searchLabel">search</label>
-      <input class"searchInput" /> 
-      <p class="searchResult"></p> 
-      <button class="newCardButton">Add a card</button>
-
-    </div>
+    <div class="searchContainer">
+  <label class="searchLabel">search</label>
+  <input
+    type="text"
+    id="searchInput"
+    class="searchInput"
+    oninput="filterTags()"
+  />
+  <p id="searchResult" class="searchResult"></p>
+  <button id="newCardButton" class="newCardButton">Add a card</button>
+</div>
 
   <div class="cardContainer" id="cardContainer"></div>
+  <div id="newCardModal" class="modal">
+  <div class="modal-content">
+    <!-- the X-button can be achieved by using the "&times;" entity -->
+
+    <span class="close">&times;</span>
+    <form>
+      <label for="imgSrc">Image source</label>
+      <input
+        type="text"
+        id="imgsrc"
+        name="source"
+        class="newCardInput"
+        placeholder="Paste your image url here"
+      />
+      <label for="tags">Tags</label>
+      <input
+        type="text"
+        id="tags"
+        name="tags"
+        class="newCardInput"
+        placeholder="Separate tags with a semicolon ( ; )"
+      />
+
+      <button type="button" class="submitButton" onclick="saveNewCard()">
+        Submit
+      </button>
+    </form>
+  </div>
+</div>
+
+  <script type="text/javascript" src="script.js"></script>
+
 
 </body>
 
